# wallet-project

./: .env.example  .gitignore  Dockerfile  PROJECT_STRUCTURE.md  README.md  docker-compose.yml  env.template  pyproject.toml
.github/workflows/: ci.yml
config/: urls.py  wsgi.py
config/settings/: base.py  dev.py  prod.py  test.py
entrypoints/: entrypoint.sh
postgres-init/: 01-init.sql
src/: __init__.py
src/api/: admin.py
src/api/api_v1/: base.py  exceptions.py  pagination.py  parsers.py  urls.py
src/api/api_v1/transactions/: docs.py  serializers.py  urls.py  views.py
src/api/api_v1/wallets/: docs.py  serializers.py  urls.py  views.py
src/application/: services.py
src/application/transactions/: commands.py  queries.py
src/application/wallets/: commands.py  queries.py
src/containers/: __init__.py  repositories.py  services.py  use_cases.py
src/domain/shared/: exceptions.py  types.py
src/domain/transactions/: entities.py  repositories.py  services.py
src/domain/wallets/: entities.py  repositories.py  services.py
src/infrastructure/transactions/: models.py  repositories.py
src/infrastructure/transactions/migrations/: 0001_initial.py
src/infrastructure/wallets/: models.py  repositories.py
src/infrastructure/wallets/migrations/: 0001_initial.py
src/tests/: README.md  __init__.py  conftest.py  run_tests.py  test_basic.py  test_pagination.py  test_refactored_views.py
src/tests/functional/: __init__.py  test_transaction_repository.py  test_wallet_repository.py
src/tests/integration/: __init__.py  test_transaction_creation_integration.py  test_wallet_application_service.py
src/tests/unit/: __init__.py  test_transaction_creation_atomic.py  test_transaction_domain_service.py  test_transaction_entity.py  test_transaction_use_cases.py  test_wallet_balance_validation.py  test_wallet_domain_service.py  test_wallet_entity.py  test_wallet_list_integration.py  test_wallet_repository.py  test_wallet_use_cases.py
